--- a/index.html
+++ b/index.html
@@ -113,15 +113,12 @@
                             <h3>OrbitA connects tech hubs, entrepreneurs, and investors across Africa, fostering collaboration, resource sharing, and innovation.</h3>
                             <div class="center-btn flex">
                                 <a href="#contact" class="btn_hover1">Partner With Us</a>
-                                <a href="#mail-list" class="btn_hover2">Join The Orbit</a>
+                                <a  class="btn_hover2 joinButton">Join The Orbit</a>
                             </div>
                         </div>
                     </div>
                 </div>
             </section>
-            <!-- ====== End of 1.2. hero section ====== -->
-        </div>
-        
         <!-- ====== 1.4. logoipsum section ====== -->
         <section class="logoipsum">
             <div class="container">
@@ -335,7 +332,7 @@
                     </div>
                 </div>
                 <div class="flex flex-center" data-aos="zoom-in">
-                    <a href="contact.html" class="btn_hover2">Join The Orbit</a>
+                    <a class="btn_hover2 joinButton">Join The Orbit</a>
                 </div>
             </div>
         </section>
@@ -387,6 +384,7 @@
                             <form action="/submit-form" method="POST">
                                 <input type="text" name="name" placeholder="Your Name" required>
                                 <input type="email" name="email" placeholder="Your Email" required>
+                                <input type="text" name="subject" placeholder="Enter Subject" required>
                                 <textarea name="message" placeholder="Your Message" required></textarea>
                                 <button class="btn_hover1" type="submit">Send Message</button>
                             </form>
@@ -407,9 +405,9 @@
                     </p>
                 </div>
                 <form id="footer-form" class="flex flex-sb gap-2" data-aos="zoom-in" data-aos-delay="400">
-                    <div id="footer-message"></div>
+                    <div id="mail-form-message"></div>
                     <input type="email" required placeholder="Enter your mail">
-                    <button type="submit" class="btn_hover1">Get Started</button>
+                    <button type="submit" class="btn_hover1">Join Mailing List</button>
                 </form>
             </div>
             <div class="footer-menu">
@@ -417,9 +415,6 @@
                     <div class="flex flex-start footer-center">
                         <div class="w-33 flex flex-col gap-2 flex-start">
                             <a href="index.html"><img src="Images/logo.png" alt="footer-logo"></a>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                                ut labore et dolore magna aliqua.
-                            </p>
                             <span class="flex gap-2">
                                 <a href="#"><i class="fa-brands fa-facebook"></i></a>
                                 <a href="#"><i class="fa-brands fa-instagram"></i></a>
@@ -472,6 +467,32 @@
 
     <!-- end site wrapper -->
 
+
+
+
+
+
+    <!-- Coming Soon Modal (This will be hidden initially) -->
+    <div id="coming-soon" class="coming-soon flex flex-col flex-center gap-1">
+        <figure><img src="Images/icon/coming-soon.png" alt="coming-soon"></figure>
+        <h2>We Are</h2>
+        <h1>Coming Soon</h1>
+        <div class="container hero-mail-form footer" id="mail-list">
+            <div class="hero-mail-form-hr flex flex-col" > 
+                <h2>Platform Under Construction</h2>
+                <p>We're thrilled to announce that OrbitA is coming soon! 🚀
+                    Be among the first to experience a new wave of innovation.
+                    Join our mailing list to stay in the loop and receive exclusive updates as we bring OrbitA to life.</p>
+            </div>
+            <form id="footer-form" class="flex flex-sb gap-2" data-aos="zoom-in" data-aos-delay="400">
+                <div id="mail-form-message"></div>
+                <input type="email" required placeholder="Enter your mail">
+                <button type="submit" class="btn_hover1">Join Mailing List</button>
+            </form>
+        </div>
+        <span class="close">&times;</span> <!-- Close button (X) -->
+    </div>
+            
 
     <!-- button back to top -->
     <button onclick="scrollToTop()" id="backToTopBtn" class="btn_hover2"><i
