--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OrbitA - Network</title>
+    <title>OrbitA</title>
     
     <link rel="stylesheet" href="css/easy.css">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
     <link rel="shortcut icon" href="Images/fave_icon.png" type="image/x-icon">
@@ -17,6 +18,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+
+        <!-- 
+    - preload images
+  -->
+  <link rel="preload" as="image" href="../Images/bg/hero_bg.png">
+  <link rel="preload" as="image" href="../Images/bg/hero.png">
 </head>
 
 <body>
@@ -362,10 +370,9 @@
                         <div class="w-33 flex flex-col gap-2 flex-start">
                             <a href="index.html"><img src="Images/logo.png" alt="footer-logo"></a>
                             <span class="flex flex-col gap-2 flex-start">
-                                <a href="#"><i class="fa-brands fa-facebook"></i></a>
-                                <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                                <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                                <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                                <a href=""><i class="fa-brands fa-instagram"></i></a>
+                                <a href=""><i class="fa-brands fa-twitter"></i></a>
+                                <a href=""><i class="fa-brands fa-linkedin"></i></a>
                             </span>
                         </div>
                         <div class="w-16 mt-1">
@@ -373,22 +380,22 @@
                             <ul class="flex flex-col gap-2 flex-start">
                                 <li><a href="#home">Home</a></li>
                                 <li><a href="#about">About</a></li>
-                                <li><a href="#">Blogs</a></li>
+                                <li><a href="">Blogs</a></li>
                             </ul>
                         </div>
                         <div class="w-16 mt-45 flex-end">
                             <ul class="flex flex-col gap-2 flex-start">
-                                <li><a href="#">FAQ</a></li>
+                                <li><a href="">FAQ</a></li>
                                 <li><a href="#contact">Contact</a></li>
-                                <li><a href="#">Team</a></li>
-                                <li><a href="#">Privacy policy</a></li>
+                                <li><a href="">Team</a></li>
+                                <li><a href="">Privacy policy</a></li>
                             </ul>
                         </div>
                         <div class="w-33 mt-1 flex flex-col flex-start">
                             <h4>Get Connected</h4>
                             <ul class="flex flex-col gap-2 flex-start">
                                 <li>
-                                    <a href="#"> <i class="fa-solid fa-phone"></i></a>
+                                    <a href="#"> <i class="fa-solid fa-phone"></i>+233 551607016</a>
                                     
                                 </li>
                                 <li>
