--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
             </div>
             <div class="team-btn" data-aos="zoom-in">
                 <div class="container flex flex-sb gap-2 flex-wrap">
-                    <h4>Please Send Email To <span>tawabbaah@orbit.africa.com</span>
+                    <h4>Please Send Email To <span>tawabbaah@orbitahub.com</span>
                     </h4>
                 </div>
             </div>
@@ -388,19 +388,18 @@
                                 <li><a href="">FAQ</a></li>
                                 <li><a href="#contact">Contact</a></li>
                                 <li><a href="">Team</a></li>
-                                <li><a href="">Privacy policy</a></li>
                             </ul>
                         </div>
                         <div class="w-33 mt-1 flex flex-col flex-start">
                             <h4>Get Connected</h4>
                             <ul class="flex flex-col gap-2 flex-start">
                                 <li>
-                                    <a href="#"> <i class="fa-solid fa-phone"></i>+233 551607016</a>
+                                    <a href="#"> <i class="fa-solid fa-phone"></i>(+233)  551 607 016</a>
                                     
                                 </li>
                                 <li>
                                     <a href="#"> <i class="fa-regular fa-envelope"></i></a>
-                                    <a href="#">+233 551607016</a>
+                                    <a href="#">tawabbaah@orbitahub.com</a>
                                 </li>
                                 
                             </ul>
