--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
                             </ul>
                         </div>
                         <div class="w-33 mt-1 flex flex-col flex-start">
-                            <h4>Get Connected</h4>
+                            <h4>Quick Contact</h4>
                             <ul class="flex flex-col gap-2 flex-start">
                                 <li>
                                     <a href="#"> <i class="fa-solid fa-phone"></i>(+233)  551 607 016</a>
