--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <button class="closebtn btn_hover1" onclick="closeNav()"><i
                                 class="fa-solid fa-xmark"></i></button>
                     </div>
-                    <div>
+                    <div id="navPananel">
                         <!-- side menus -->
                         <ul>
                             <li><a class="nav-link active" href="#home">Home</a></li>
@@ -294,6 +294,8 @@
                     <hr class="team-hr1">
                     <h5>Our Team</h5>
                 </div>
+                <h2 class="mt-1">Meet our team of skilled professionals dedicated to excellence.
+                </h2>
                 <div class="team-slider flex mt-15">
                     <div class="team-img" data-aos="fade-up">
                         <img src="Images/home/tawab.png" alt="Avatar">
@@ -302,8 +304,7 @@
                                 <h3>Tawab L. Baah</h3>
                                 <h4>Co-founder/CTO</h4>
                                 <div class="flex flex-center gap-1">
-                                    <a href="#"><i class="fa-brands fa-linkedin-in"></i></i></a>
-                                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                                    <a href="www.linkedin.com/in/tawab-lukumuah-baah/"><i class="fa-brands fa-linkedin-in"></i></i></a> 
                                 </div>
                             </div>
                         </div>
@@ -315,8 +316,7 @@
                                 <h3>Stephen T. Maldima</h3>
                                 <h4>Co-founder/CEO</h4>
                                 <div class="flex flex-center gap-1">
-                                    <a href="#"><i class="fa-brands fa-linkedin-in"></i></i></a>
-                                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                                    <a href="https://www.linkedin.com/in/stephen-maldima/"><i class="fa-brands fa-linkedin-in"></i></i></a> 
                                 </div>
                             </div>
                         </div>
@@ -328,8 +328,7 @@
                                 <h3>Habiba Alrashidy</h3>
                                 <h4>Co-founder/COO</h4>
                                 <div class="flex flex-center gap-1">
-                                    <a href="#"><i class="fa-brands fa-linkedin-in"></i></i></a>
-                                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                                    <a href="https://www.linkedin.com/in/habibaalrashidy/"><i class="fa-brands fa-linkedin-in"></i></i></a> 
                                 </div>
                             </div>
                         </div>
@@ -437,7 +436,7 @@
                             <h4>Quick Contact</h4>
                             <ul class="flex flex-col gap-2 flex-start">
                                 <li>
-                                    <a href="#"> <i class="fa-solid fa-phone"></i>(+233)  551 607 016</a>
+                                    <a href=""> <i class="fa-solid fa-phone"></i>(+233)  551 607 016</a>
                                     
                                 </li>
                                 <li>
