--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
                                 <h3>Tawab L. Baah</h3>
                                 <h4>Co-founder/CTO</h4>
                                 <div class="flex flex-center gap-1">
-                                    <a href="www.linkedin.com/in/tawab-lukumuah-baah/"><i class="fa-brands fa-linkedin-in"></i></i></a> 
+                                    <a href="https://www.linkedin.com/in/tawab-lukumuah-baah/"><i class="fa-brands fa-linkedin-in"></i></i></a> 
                                 </div>
                             </div>
                         </div>
