debuged team display

--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
                         <img src="Images/home/tawab.png" alt="Avatar">
                         <div class="overlay">
                             <div class="overlay_text">
-                                <h3>Tawab L. Baah</h3>
+                                <h3>Tawab Lukumuah Baah</h3>
                                 <h4>Co-founder/CTO</h4>
                                 <div class="flex flex-center gap-1">
                                     <a href="https://www.linkedin.com/in/tawab-lukumuah-baah/"><i class="fa-brands fa-linkedin-in"></i></i></a> 
@@ -313,7 +313,7 @@
                         <img src="Images/home/stephen.jpg" alt="Avatar">
                         <div class="overlay">
                             <div class="overlay_text">
-                                <h3>Stephen T. Maldima</h3>
+                                <h3>Stephen Maldima</h3>
                                 <h4>Co-founder/CEO</h4>
                                 <div class="flex flex-center gap-1">
                                     <a href="https://www.linkedin.com/in/stephen-maldima/"><i class="fa-brands fa-linkedin-in"></i></i></a> 
